# MyCppTemplate

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Private.cpp  Private.hpp  Public.cpp  PublicImpl.cpp  PublicImpl.hpp
src/include/MyCppTemplate/: Public.hpp
tests/: CMakeLists.txt  PublicTests.cpp
